# ddc

./: CMakeLists.txt  README.md
docker/: Dockerfile
scripts/: conf.sh  services.sh
src/: CMakeLists.txt  conanfile.txt
src/counter/: CMakeLists.txt  countersrv.cpp
src/dev-adapters/: CMakeLists.txt  fakefile.cpp
src/q-listener/: CMakeLists.txt  qlistener.cpp
